// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when commenting has been disabled (collapsing) 1`] = `
<PostCommentFormClosedSitewide
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
>
  commenting disabled
</PostCommentFormClosedSitewide>
`;

exports[`renders when commenting has been disabled (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when story has been closed (collapsing) 1`] = `
<PostCommentFormClosed
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
>
  story closed
</PostCommentFormClosed>
`;

exports[`renders when story has been closed (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="story closed"
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  disabled={false}
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;
